--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,10 +6,31 @@
   box-sizing: border-box;
 }
 
+:root {
+  --view-width: 90vw;
+  --max-width: 1120px;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+.container {
+  width: 90vw;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 /* 
@@ -30,4 +51,21 @@ Lost page
 .gif {
   pointer-events: none;
   border: 0px;
+}
+
+/* 
+==========
+Error page
+==========
+*/
+.not-found-container {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+  text-align: center;
+}
+
+.not-found-img {
+  max-width: 480px;
+  margin-bottom: 1rem;
 }
