--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,15 +6,83 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 100%;
+}
+
 :root {
+  /* colors */
+  /* primary */
+  --primary-50: #f2f8fd;
+  --primary-100: #e4effa;
+  --primary-200: #c2ddf5;
+  --primary-300: #8cc3ed;
+  --primary-400: #4fa4e1;
+  --primary-500: #2680c2;
+  --primary-600: #1a6baf;
+  --primary-700: #16558e;
+  --primary-800: #164976;
+  --primary-900: #183f62;
+  --primary-950: #102741;
+
+  /* grey */
+  --grey-50: hsl(204, 26%, 96%);
+  --grey-100: hsl(207, 22%, 90%);
+  --grey-200: hsl(211, 23%, 82%);
+  --grey-300: hsl(208, 23%, 69%);
+  --grey-400: hsl(210, 22%, 49%);
+  --grey-500: hsl(211, 24%, 43%);
+  --grey-600: hsl(213, 23%, 36%);
+  --grey-700: hsl(216, 20%, 31%);
+  --grey-800: hsl(217, 17%, 27%);
+  --grey-900: hsl(218, 16%, 24%);
+  --grey-950: hsl(221, 21%, 15%);
+
+  /* rest of colors */
+  --black: #222;
+  --white: #fff;
+
+  /* rest of vars */
+  --backgroundColor: var(--grey-50);
+  --textColor: var(--grey-950);
+  --border-radius: 0.25rem;
+  --letter-spacing: 0.05em;
+  ---transition: all 0.3s ease-in-out;
   --view-width: 90vw;
   --max-width: 1120px;
+  --fixed-width: 600px;
+
+  /* box shadow */
+  --shadow-1: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --shadow-2: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --shadow-3: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --shadow-4: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
 }
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
   line-height: 1.5;
+  background-color: var(--backgroundColor);
+  color: var(--textColor);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  margin-bottom: 1.38rem;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.text {
+  margin-bottom: 1.5rem;
+  max-width: 40em;
 }
 
 a {
@@ -27,10 +95,93 @@ img {
   object-fit: cover;
 }
 
+/** buttons */
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primary-500);
+  border: transparent;
+  border-radius: var(--border-radius);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(---transition);
+}
+
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-2);
+}
+
 .container {
   width: 90vw;
   max-width: var(--max-width);
   margin: 0 auto;
+}
+
+/** form */
+.form {
+  width: var(--view-width);
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+
+.form-label {
+  display: block;
+  font-size: var(--smallText);
+  margin-bottom: 0.5rem;
+}
+
+.form-input {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  background: var(--backgroundColor);
+  border: 1px solid var(--grey-200);
+  border-radius: var(--border-radius);
+}
+
+.form-row {
+  margin-bottom: 1rem;
+}
+
+::placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+
+.btn-block {
+  width: 100%;
+}
+
+/** spinner */
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 5rem;
+  height: 5rem;
+  margin: 0 auto;
+  border: 5px solid var(--grey-300);
+  border-radius: 50%;
+  border-top-color: var(--primary-500);
+  animation: spin 1s linear infinite;
+}
+
+/* 
+==========
+Home page
+==========
+*/
+.home {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
 }
 
 /* 
