--- a/client/src/index.css
+++ b/client/src/index.css
@@ -85,6 +85,14 @@ h5 {
   max-width: 40em;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.italic {
+  font-style: italic;
+}
+
 a {
   text-decoration: none;
 }
@@ -112,14 +120,8 @@ img {
   box-shadow: var(--shadow-2);
 }
 
-.container {
-  width: 90vw;
-  max-width: var(--max-width);
-  margin: 0 auto;
-}
-
 /** form */
-.form {
+.card {
   width: var(--view-width);
   max-width: var(--fixed-width);
   background: var(--white);
@@ -127,33 +129,6 @@ img {
   box-shadow: var(--shadow-2);
   padding: 2rem 2.5rem;
   margin: 3rem auto;
-}
-
-.form-label {
-  display: block;
-  font-size: var(--smallText);
-  margin-bottom: 0.5rem;
-}
-
-.form-input {
-  width: 100%;
-  padding: 0.375rem 0.75rem;
-  background: var(--backgroundColor);
-  border: 1px solid var(--grey-200);
-  border-radius: var(--border-radius);
-}
-
-.form-row {
-  margin-bottom: 1rem;
-}
-
-::placeholder {
-  font-family: inherit;
-  color: var(--grey-400);
-}
-
-.btn-block {
-  width: 100%;
 }
 
 /** spinner */
@@ -173,15 +148,19 @@ img {
   animation: spin 1s linear infinite;
 }
 
-/* 
-==========
-Home page
-==========
-*/
-.home {
+.full-page {
   min-height: 100vh;
+}
+
+.grid-center {
   display: grid;
   place-items: center;
+}
+
+.container {
+  width: 90vw;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 /* 
@@ -189,19 +168,10 @@ Home page
 Lost page
 ==========
 */
-.lost-container {
-  display: grid;
-  place-items: center;
-  min-height: 100vh;
-}
-
-.lost-container h1 {
-  text-align: center;
-}
-
 .gif {
   pointer-events: none;
   border: 0px;
+  margin-bottom: 1rem;
 }
 
 /* 
@@ -209,14 +179,7 @@ Lost page
 Error page
 ==========
 */
-.not-found-container {
-  min-height: 100vh;
-  display: grid;
-  place-items: center;
-  text-align: center;
-}
-
-.not-found-img {
+.error-img {
   max-width: 480px;
   margin-bottom: 1rem;
 }
