--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,6 +42,10 @@ html {
   --black: #222;
   --white: #fff;
 
+  /* fonts */
+  --small-text: 0.875rem;
+  --extra-small-text: 0.7em;
+
   /* rest of vars */
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-950);
@@ -85,6 +89,11 @@ h5 {
   max-width: 40em;
 }
 
+small,
+.text-small {
+  font-size: var(--small-text);
+}
+
 .text-center {
   text-align: center;
 }
@@ -120,6 +129,10 @@ img {
   box-shadow: var(--shadow-2);
 }
 
+.btn:focus {
+  box-shadow: 0 0 0 2px var(--primary-700);
+}
+
 .btn-outline {
   background: transparent;
   border: 1px solid var(--primary-500);
@@ -131,7 +144,46 @@ img {
   color: var(--white);
 }
 
+.btn-outline:focus {
+  box-shadow: 0 0 0 2px var(--primary-500);
+}
+
 /** form */
+.form-title {
+  font-weight: 700;
+}
+
+.form-label {
+  display: block;
+  font-size: var(--small-text);
+  margin-bottom: 0.5rem;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  background: var(--backgroundColor);
+  border: 1px solid var(--grey-200);
+  border-radius: var(--border-radius);
+}
+
+.form-input:focus,
+.form-textarea:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px var(--primary-700);
+}
+
+.form-fieldset {
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.form-textarea {
+  height: 7rem;
+}
+
+/** card **/
 .card {
   width: var(--view-width);
   max-width: var(--fixed-width);
@@ -140,6 +192,91 @@ img {
   box-shadow: var(--shadow-2);
   padding: 2rem 2.5rem;
   margin: 3rem auto;
+}
+
+/** modal **/
+
+/* reset */
+button,
+fieldset,
+input {
+  all: unset;
+}
+
+@keyframes overlayShow {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.modal-overlay {
+  background-color: rgba(0 0 0 / 0.5);
+  position: fixed;
+  inset: 0;
+  animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+@keyframes contentShow {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -48%) scale(0.96);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
+.modal-content {
+  background-color: white;
+  border-radius: var(--border-radius);
+  box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px,
+    hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 90vw;
+  max-width: 450px;
+  max-height: 85vh;
+  padding: 1.5rem;
+  animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+}
+
+.modal-content:focus {
+  outline: none;
+}
+
+.modal-title {
+  font-weight: 500;
+}
+
+.close-btn {
+  cursor: pointer;
+  font-family: inherit;
+  border-radius: 100%;
+  height: 25px;
+  width: 25px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  transition: var(---transition);
+}
+
+.close-btn:hover {
+  background-color: var(--primary-100);
+}
+
+.close-btn:focus {
+  box-shadow: 0 0 0 2px var(--primary-700);
 }
 
 /** spinner */
