--- a/client/src/index.css
+++ b/client/src/index.css
@@ -167,6 +167,7 @@ fieldset {
 
 .form-input,
 .form-textarea {
+  resize: none;
   width: 100%;
   padding: 0.375rem 0.75rem;
   background: var(--backgroundColor);
